--- a/ComJanWpf/ComJanWpf/Views/MainWindow.xaml
+++ b/ComJanWpf/ComJanWpf/Views/MainWindow.xaml
@@ -34,17 +34,49 @@
     </i:Interaction.Triggers>
 
     <Grid>
-        <Image x:Name="_picture" MouseDown="_capturedImageBox_MouseDown"/>
+        <Image x:Name="_picture" MouseDown="_capturedImageBox_MouseDown" Width="600" Height="337" />
         <Grid VerticalAlignment="Center">
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
             </Grid.RowDefinitions>
-            <Image x:Name="_capturedImageBox" Width="640" Height="480" VerticalAlignment="Top" HorizontalAlignment="Left" MouseDown="_capturedImageBox_MouseDown_1" Grid.Row="0"/>
+            <Image x:Name="_capturedImageBox" Width="400" Height="225" MouseDown="_capturedImageBox_MouseDown_1" Grid.Row="0"/>
             <Grid VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.Row="1">
                 
-                <Image x:Name="_pctStill" Width="640" Height="480"/>
-                <Rectangle x:Name="_pctPai" StrokeThickness="2" Width="300" Height="300" Stroke="#FF0FCF0F" Margin="0,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+                <Image x:Name="_pctStill" Width="400" Height="225"/>
+                <!--<Rectangle x:Name="_pctPai" StrokeThickness="2" Width="300" Height="300" Stroke="#FF0FCF0F" Margin="0,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"/>-->
+            </Grid>
+            <Grid Grid.Row="2">
+                <Image x:Name="_pctPai" Width="993" Height="75"/>
+            </Grid>
+            <Grid Grid.Row="3">
+                <Grid.Resources>
+                    <Style TargetType="{x:Type Image}" x:Key="_s1">
+                        <Setter Property="Width" Value="57"/>
+                        <Setter Property="Height" Value="75"/>
+                        <Setter Property="HorizontalAlignment" Value="Left"/>
+                        <Setter Property="Margin" Value="15,0,0,0"/>
+                    </Style>
+                </Grid.Resources>
+                <StackPanel Orientation="Horizontal">
+                    <Image x:Name="_pai01" Style="{StaticResource _s1}"/>
+                    <Image x:Name="_pai02" Style="{StaticResource _s1}"/>
+                    <Image x:Name="_pai03" Style="{StaticResource _s1}"/>
+                    <Image x:Name="_pai04" Style="{StaticResource _s1}"/>
+                    <Image x:Name="_pai05" Style="{StaticResource _s1}"/>
+                    <Image x:Name="_pai06" Style="{StaticResource _s1}"/>
+                    <Image x:Name="_pai07" Style="{StaticResource _s1}"/>
+                    <Image x:Name="_pai08" Style="{StaticResource _s1}"/>
+                    <Image x:Name="_pai09" Style="{StaticResource _s1}"/>
+                    <Image x:Name="_pai10" Style="{StaticResource _s1}"/>
+                    <Image x:Name="_pai11" Style="{StaticResource _s1}"/>
+                    <Image x:Name="_pai12" Style="{StaticResource _s1}"/>
+                    <Image x:Name="_pai13" Style="{StaticResource _s1}"/>
+                    <Image x:Name="_pai14" Style="{StaticResource _s1}"/>
+                </StackPanel>
+                
             </Grid>
         </Grid>
         
